# pidgets

./: README.md  pidgets.cabal  stack.yaml
src/: Main.hs
